--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "simple-webapp",
-  "version": "0.0.0",
+  "name": "gandalf.landing.web",
+  "version": "0.9.0",
   "dependencies": {}
 }
 
