--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "0.0.0",
+  "name": "gandalf.landing.web",
+  "version": "0.9.0",
   "scripts": {
     "postinstall": "bower install",
     "start": "gulp",
