--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "gandalf.landing.web",
   "version": "0.9.0",
   "dependencies": {
-    "prism": "Prism#^1.4.1"
+    "prism": "Prism#^1.4.1",
+    "highlightjs": "^9.2.0"
   }
 }
