--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
-    "gulp-html-tag-include": "^1.0.1"
+    "gulp-concat": "^2.6.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-html-tag-include": "^1.0.1",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-sequence": "^0.4.5",
+    "gulp-uglify": "^1.5.4",
+    "yargs": "^4.7.1"
   }
 }
